pre ~ 27.01.22 | replacing and with & in description

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <div role="doc-subtitle">Hi, my name is</div>
       <h1 class="myName">Sergio Garcia Gallego</h1>
       <h2 class="myJob">and I help build the web</h2>
-      <p class="myDesc">Just another ambitious 18 year old Junior Frontend Developer with 2 years experience in the tech sector. I'm currently based in the UK and working with PurpleBeard Training to make apprenticeships & training more accesible.</p>
+      <p class="myDesc">Just another ambitious 18 year old Junior Frontend Developer with 2 years experience in the tech sector. I'm currently based in the UK & working with PurpleBeard Training to make apprenticeships & training more accesible.</p>
     </div>
 
     <div class="inline">
