pre ~ 27.01.22 | small bug fix - monospace font incorrect output

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <li><i>02.</i><a href="#">Experience</a></li>
         <li><i>03.</i><a href="#">Work</a></li>
         <li><i>04.</i><a href="#">Contact</a></li>
-        <li><a href="./docs/resume/resume_1-22.pdf" id="last">Resume</a></li>
+        <li><a href="./docs/resume/resume_1-22.pdf" target="_blank" id="last">Resume</a></li>
       </ul>
     </nav>
 
