--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
     <div class="head bg">
       <div role="doc-subtitle">Hi, my name is</div>
       <h1 class="myName">Sergio Garcia Gallego</h1>
-      <h2 class="myJob">and I help build the web</h2>
-      <p class="myDesc">Just another ambitious 18 year old Junior Frontend Developer with 2 years experience in the tech sector. I'm currently based in the UK & working with PurpleBeard Training to make apprenticeships & training more accesible.</p>
+      <h2 class="myJob">and I help build the web.</h2>
+      <p class="myDesc">An ambitious UK-based 18 year old Junior Frontend Developer with 2 years of experience. Currently working with <a href="">PurpleBeard Training ltd.</a> with the vision of making IT apprenticeships & training more accessible to all.</p>
     </div>
 
     <div class="inline">
