pre ~ 28.01.22 | [Addition of Section] - created the about section, smoothed out certain css page features etc

--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
 
     <nav class="fixedtop">
       <ul class="left">
-        <li><a href=""><img src="./logo.png" alt="Logo"></a></li>
+        <li><a href="#"><img src="./logo.png" alt="Logo"></a></li>
       </ul>
       <ul class="right mono">
-        <li><i>01.</i><a href="#">About</a></li>
+        <li><i>01.</i><a href="#about">About</a></li>
         <li><i>02.</i><a href="#">Experience</a></li>
         <li><i>03.</i><a href="#">Work</a></li>
         <li><i>04.</i><a href="#">Contact</a></li>
@@ -64,12 +64,12 @@
       </ul>
     </nav>
 
-    <div class="head bg">
+    <section class="head bg">
       <div role="doc-subtitle">Hi, my name is</div>
       <h1 class="myName">Sergio Garcia Gallego</h1>
       <h2 class="myJob">and I help build the web.</h2>
       <p class="myDesc">An ambitious UK-based 18 year old Junior Frontend Developer with 2 years of experience. Currently working with <a href="">PurpleBeard Training ltd.</a> with the vision of making IT apprenticeships & training more accessible to all.</p>
-    </div>
+    </section>
 
     <div class="inline">
       <ul class="social">
@@ -79,6 +79,34 @@
         <li><a href="https://www.linkedin.com/in/sgarciagallego/" target="_blank"><img src="./img/icons8-linkedin-50px.png" alt="" id="last"></a></li>
       </ul>
     </div>
+
+    <section class="about">
+      <a name="about"></a>
+      <div class="heading">
+        <i>01.</i><h3>About Me</h3>
+      </div>
+      <div class="me">
+        <div class="longDesc">
+          <p>Hey there <span class="eWave"></span> I'm Sergio, & my passion lies in tech, preferably where design and UX is involved.</p>
+          <p>My magnet towards tech began young, when the only way to install Minecraft was through a battered laptop running Fedora 18 through the xterm terminal & the only way to play Roblox was through a Virtual Machine running Windows 7.</p>
+          <p>Now is 2022, & I am constantly smashing expectations at each company I join. I am confident in my skillset & I do not role over at the sight of challenge.</p>
+          <p>I have <a href="https://meghdhara.co.uk" target="_blank" rel="noreferrer">freelanced</a>, I have worked for <a href="https://vasavebusiness.com" target="_blank" rel="noreferrer">a start-up</a>, & come present day I am now working for a <a href="https://purplebeard.co.uk/" target="_blank" rel="noreferrer">gov.uk training provider</a>. It has been a journey for only 1.5 years, & I can't wait to see what comes next!</p>
+          <p>Here are a few technologies I have been using daily:</p>
+          <ul class="techSkills">
+            <li><img src="./img/icons8-html-5-50px.png" alt="HTMl5" title="HTML5"></li>
+            <li><img src="./img/icons8-css3-50px.png" alt="CSS3" title="CSS3"></li>
+            <li><img src="./img/icons8-sass-50px.png" alt="SASS" title="SASS"></li>
+            <li><img src="./img/icons8-javascript-50px.png" alt="JavaScript (ES6+)" title="JavaScript (ES6+)"></li>
+            <li><img src="./img/icons8-reactjs-50px.png" alt="React.js" title="React.js"></li>
+            <li><img src="./img/icons8-git-50px.png" alt="Git" title="Git"></li>
+          </ul>
+        </div>
+        <div class="myPic">
+          <img src="./img/myPic.jpg" alt="">
+        </div>
+      </div>
+
+    </section>
 
   </body>
 </html>
