pre ~ 28.01.22 @ 02:29AM | [Self Assessment] - bugs & fixes from recent release, links working, grammatical errors fixed etc

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <div role="doc-subtitle">Hi, my name is</div>
       <h1 class="myName">Sergio Garcia Gallego</h1>
       <h2 class="myJob">and I help build the web.</h2>
-      <p class="myDesc">An ambitious UK-based 18 year old Junior Frontend Developer with 2 years of experience. Currently working with <a href="">PurpleBeard Training ltd.</a> with the vision of making IT apprenticeships & training more accessible to all.</p>
+      <p class="myDesc">An ambitious UK-based 18 year old Junior Frontend Developer with 1.5 years of experience. Currently working with <a href="https://purplebeard.co.uk/" target="_blank" rel="noreferrer">PurpleBeard Training ltd.</a> with the vision of making IT apprenticeships & training more accessible.</p>
     </section>
 
     <div class="inline">
@@ -88,9 +88,9 @@
       <div class="me">
         <div class="longDesc">
           <p>Hey there <span class="eWave"></span> I'm Sergio, & my passion lies in tech, preferably where design and UX is involved.</p>
-          <p>My magnet towards tech began young, when the only way to install Minecraft was through a battered laptop running Fedora 18 through the xterm terminal & the only way to play Roblox was through a Virtual Machine running Windows 7.</p>
-          <p>Now is 2022, & I am constantly smashing expectations at each company I join. I am confident in my skillset & I do not role over at the sight of challenge.</p>
-          <p>I have <a href="https://meghdhara.co.uk" target="_blank" rel="noreferrer">freelanced</a>, I have worked for <a href="https://vasavebusiness.com" target="_blank" rel="noreferrer">a start-up</a>, & come present day I am now working for a <a href="https://purplebeard.co.uk/" target="_blank" rel="noreferrer">gov.uk training provider</a>. It has been a journey for only 1.5 years, & I can't wait to see what comes next!</p>
+          <p>My magnet towards computing began at a young age, when the only way for me to install Minecraft was through a battered laptop running Fedora Linux 18. The challenge of using Xterm to install any application taunted me to learn more I guess.</p>
+          <p>Fast forward to 2022. I am constantly smashing expectations wherever I go. I am confident in my skillset & I do not role over at the sight of a challenge.</p>
+          <p>I have <a href="https://meghdhara.co.uk" target="_blank" rel="noreferrer">freelanced</a>, I have worked for <a href="https://vasavebusiness.com" target="_blank" rel="noreferrer">a start-up</a>, & come present day I am now working for a <a href="https://purplebeard.co.uk/" target="_blank" rel="noreferrer">gov.uk training provider</a>. It has been a journey for the time I've been in the industry, & I can't wait to see what comes next!</p>
           <p>Here are a few technologies I have been using daily:</p>
           <ul class="techSkills">
             <li><img src="./img/icons8-html-5-50px.png" alt="HTMl5" title="HTML5"></li>
