pre ~ 28.01.22 @ 05:19AM | [New Content Additions] - Experience added & fixed issue with image overlapping nav menu (z-index)

--- a/index.html
+++ b/index.html
@@ -53,12 +53,11 @@
 
     <nav class="fixedtop">
       <ul class="left">
-        <li><a href="#"><img src="./logo.png" alt="Logo"></a></li>
+        <li><a href="#"><img src="./logo.png" alt="Site Logo"></a></li>
       </ul>
       <ul class="right mono">
         <li><i>01.</i><a href="#about">About</a></li>
-        <li><i>02.</i><a href="#">Experience</a></li>
-        <li><i>03.</i><a href="#">Work</a></li>
+        <li><i>02.</i><a href="#experience">Experience</a></li>
         <li><i>04.</i><a href="#">Contact</a></li>
         <li><a href="./docs/resume/resume_1-22.pdf" target="_blank" id="last">Resume</a></li>
       </ul>
@@ -68,26 +67,26 @@
       <div role="doc-subtitle">Hi, my name is</div>
       <h1 class="myName">Sergio Garcia Gallego</h1>
       <h2 class="myJob">and I help build the web.</h2>
-      <p class="myDesc">An ambitious UK-based 18 year old Junior Frontend Developer with 1.5 years of experience. Currently working with <a href="https://purplebeard.co.uk/" target="_blank" rel="noreferrer">PurpleBeard Training ltd.</a> with the vision of making IT apprenticeships & training more accessible.</p>
+      <p class="myDesc">An ambitious UK-based 18 year old Junior Frontend Developer with 1.5 years of experience. Currently working at <a href="https://purplebeard.co.uk/" target="_blank" rel="noreferrer">PurpleBeard Training ltd.</a> with the vision of making IT apprenticeships & training more accessible.</p>
     </section>
 
     <div class="inline">
       <ul class="social">
-        <li><a href="https://github.com/sgarciagallego" target="_blank"><img src="./img/icons8-github-50px.png" alt=""></li>
-        <li><a href="https://www.instagram.com/s_garciagallego/" target="_blank"><img src="./img/icons8-instagram-50px.png" alt=""></a></li>
-        <li><a href="https://twitter.com/mrgarciagallego" target="_blank"><img src="./img/icons8-twitter-50px.png" alt=""></a></li>
-        <li><a href="https://www.linkedin.com/in/sgarciagallego/" target="_blank"><img src="./img/icons8-linkedin-50px.png" alt="" id="last"></a></li>
+        <li><a href="https://github.com/sgarciagallego" target="_blank"><img src="./img/icons8-github-50px.png" alt="GitHub account"></li>
+        <li><a href="https://www.instagram.com/s_garciagallego/" target="_blank"><img src="./img/icons8-instagram-50px.png" alt="Instagram account"></a></li>
+        <li><a href="https://twitter.com/mrgarciagallego" target="_blank"><img src="./img/icons8-twitter-50px.png" alt="Twitter account"></a></li>
+        <li><a href="https://www.linkedin.com/in/sgarciagallego/" target="_blank"><img src="./img/icons8-linkedin-50px.png" alt="LinkedIn account" id="last"></a></li>
       </ul>
     </div>
 
+    <a name="about"></a>
     <section class="about">
-      <a name="about"></a>
       <div class="heading">
         <i>01.</i><h3>About Me</h3>
       </div>
       <div class="me">
         <div class="longDesc">
-          <p>Hey there <span class="eWave"></span> I'm Sergio, & my passion lies in tech, preferably where design and UX is involved.</p>
+          <p>Hey there <span class="eWave"></span> I'm Sergio, & my passion lies in tech, preferably where design & UX is involved.</p>
           <p>My magnet towards computing began at a young age, when the only way for me to install Minecraft was through a battered laptop running Fedora Linux 18. The challenge of using Xterm to install any application taunted me to learn more I guess.</p>
           <p>Fast forward to 2022. I am constantly smashing expectations wherever I go. I am confident in my skillset & I do not role over at the sight of a challenge.</p>
           <p>I have <a href="https://meghdhara.co.uk" target="_blank" rel="noreferrer">freelanced</a>, I have worked for <a href="https://vasavebusiness.com" target="_blank" rel="noreferrer">a start-up</a>, & come present day I am now working for a <a href="https://purplebeard.co.uk/" target="_blank" rel="noreferrer">gov.uk training provider</a>. It has been a journey for the time I've been in the industry, & I can't wait to see what comes next!</p>
@@ -102,10 +101,36 @@
           </ul>
         </div>
         <div class="myPic">
-          <img src="./img/myPic.jpg" alt="">
+          <img src="./img/myPic.jpg" alt="This is a Picture of me!">
         </div>
       </div>
+    </section>
 
+    <a name="experience"></a>
+    <section class="experience">
+      <div class="heading">
+        <i>02.</i><h3>Experience</h3>
+      </div>
+      <div class="timeline">
+        <div class="card">
+          <div role="doc-subtitle" class="date">Jan 22 - Present</div>
+          <h4>Junior Frontend Dev & TA <span class="stylechar">@</span> <a href="https://purplebeard.co.uk" target="_blank" rel="noreferrer">PurpleBeard Training ltd.</a></h4>
+          <ul class="rolePoints">
+            <li>Working closely with inter-disciplinary teams to achieve set goals.</li>
+            <li>Maintaining & building code whilst collaborating with team members to efficiently reach deadlines.</li>
+            <li>Mentoring & assisting apprentices undertaking Introduction to Frontend courses as part of our programs</li>
+          </ul>
+        </div>
+        <div class="card">
+          <div role="doc-subtitle" class="date">Sep 20 - Dec 21</div>
+          <h4>Apprentice Frontend Web Dev <span class="stylechar">@</span> <a href="https://vasavebusiness.com" target="_blank" rel="noreferrer">Vasave</a></h4>
+          <ul class="rolePoints">
+            <li>Actively worked collaboratively on in house & client projects.</li>
+            <li>Maintained & built production-level code via modern approaches to achieve set goals.</li>
+            <li>Kept constant communication with various relevant teams of designers, clients, & content producers daily.</li>
+          </ul>
+        </div>
+      </div> 
     </section>
 
   </body>
