pre ~ 28.01.21 @ 5:40AM | creating meta tags for SEO Ranking

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <!-- Viewports -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!-- For the Bots -->
+    <meta name=”robots” content=”index, follow”>
+
     <!-- Site Favicon -->
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
@@ -33,6 +36,15 @@
 
     <!-- Site Title -->
     <title>Sergio Garcia Gallego</title>
+
+    <!-- Site Description -->
+    <meta name="description" content="Hi! I'm Sergio Garcia Gallego, and I'm a Frontend Developer helping to build the web. Have a look at my portfolio, and if you like what you see, get in touch!">
+
+    <!-- Keywords -->
+    <meta name="keywords" content="Frontend Developer Portfolio, Developer Portfolio, Sergio Garcia Gallego, Sergio Garcia, Portfolio, Junior Developer, Junior Frontend Developer">
+
+    <!-- Canonical Tag -->
+    <link rel="canonical" href="https://iamsergio.dev/">
 
     <!-- Internal Links -->
     <link rel="stylesheet" href="./main.css">
