pre ~ 28.01.22 @ 11:20AM | [Added Sections] - contact and footer, edited CSS slightly etc

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <ul class="right mono">
         <li><i>01.</i><a href="#about">About</a></li>
         <li><i>02.</i><a href="#experience">Experience</a></li>
-        <li><i>04.</i><a href="#">Contact</a></li>
+        <li><i>03.</i><a href="#contact">Contact</a></li>
         <li><a href="./docs/resume/resume_1-22.pdf" target="_blank" id="last">Resume</a></li>
       </ul>
     </nav>
@@ -144,6 +144,32 @@
         </div>
       </div> 
     </section>
+
+    <a name="contact"></a>
+    <section class="contact">
+      <div class="heading">
+        <i>03.</i><h3>Contact</h3>
+      </div>
+      <div class="contactForm">
+        <div class="whyContact">
+          <p>Although I am not actively searching for new work, I am always open to chat about anything! </p>
+        </div>
+        <form action="https://formsubmit.co/gallegogarciasergio@gmail.com" method="POST">
+          <input type="hidden" name="_captcha" value="false">
+          <input type="text" name="_honey" style="display: none;">
+          <input type="text" name="Full Name" placeholder="Full Name" required>
+          <input type="text" name="Company" placeholder="Company" required>
+          <input type="email" name="email address" placeholder="Email Address" required> 
+          <input type="tel" name="phone" placeholder="Phone No." required>
+          <button type="submit">Submit</button>
+          <input type="hidden" name="_next" value="#">
+        </form>
+      </div>
+    </section>
+
+    <footer class="allContact">
+      <p>Build & Design by <a href="mailto:gallegogarciasergio@gmail.com"><span class="copyright"></span> Sergio Garcia</a></p>
+    </footer>
 
   </body>
 </html>
