pre ~ 28.01.22 @ 11:27AM | [masking email in contact form]

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         <div class="whyContact">
           <p>Although I am not actively searching for new work, I am always open to chat about anything! </p>
         </div>
-        <form action="https://formsubmit.co/gallegogarciasergio@gmail.com" method="POST">
+        <form action="https://formsubmit.co/d7abdea6c189dd7cc96d4eeffd77d5eb" method="POST">
           <input type="hidden" name="_captcha" value="false">
           <input type="text" name="_honey" style="display: none;">
           <input type="text" name="Full Name" placeholder="Full Name" required>
