pre ~ 28.01.22 @ 11:31AM | changing form features for easier email readability

--- a/index.html
+++ b/index.html
@@ -159,8 +159,8 @@
           <input type="text" name="_honey" style="display: none;">
           <input type="text" name="Full Name" placeholder="Full Name" required>
           <input type="text" name="Company" placeholder="Company" required>
-          <input type="email" name="email address" placeholder="Email Address" required> 
-          <input type="tel" name="phone" placeholder="Phone No." required>
+          <input type="email" name="Email Address" placeholder="Email Address" required> 
+          <input type="tel" name="Phone Number" placeholder="Phone No." required>
           <button type="submit">Submit</button>
           <input type="hidden" name="_next" value="#">
         </form>
