pre ~ 28.01.22 | [close to v1.0] - removing and adding padding, margin etc, correcting some difficult textto read

--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
         <div class="longDesc">
           <p>Hey there <span class="eWave"></span> I'm Sergio, & my passion lies in tech, preferably where design & UX is involved.</p>
           <p>My magnet towards computing began at a young age, when the only way for me to install Minecraft was through a battered laptop running Fedora Linux 18. The challenge of using Xterm to install any application taunted me to learn more I guess.</p>
-          <p>Fast forward to 2022. I am constantly smashing expectations wherever I go. I am confident in my skillset & I do not role over at the sight of a challenge.</p>
-          <p>I have <a href="https://meghdhara.co.uk" target="_blank" rel="noreferrer">freelanced</a>, I have worked for <a href="https://vasavebusiness.com" target="_blank" rel="noreferrer">a start-up</a>, & come present day I am now working for a <a href="https://purplebeard.co.uk/" target="_blank" rel="noreferrer">gov.uk training provider</a>. It has been a journey for the time I've been in the industry, & I can't wait to see what comes next!</p>
+          <p>Fast forward to 2020, and I have had the pleasure to work at <a href="https://vasavebusiness.com" target="_blank" rel="noreferrer">a start-up</a> and have allowed the opportunity for a bit of <a href="">freelancing</a>.</p>
+          <p>Come present day I am now working for a <a href="https://purplebeard.co.uk/" target="_blank" rel="noreferrer">gov.uk training provider</a>. It has been a real rollercoaster for the time I've been in the industry, & I can't wait to see what comes next!</p>
           <p>Here are a few technologies I have been using daily:</p>
           <ul class="techSkills">
             <li><img src="./img/icons8-html-5-50px.png" alt="HTMl5" title="HTML5"></li>
