pre ~ 28.01.22 @ 12:09PM | fixing issue with form

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
           <input type="text" name="Company" placeholder="Company" required>
           <input type="email" name="Email Address" placeholder="Email Address" required> 
           <input type="tel" name="Phone Number" placeholder="Phone No." required>
-          <button type="submit">Submit</button>
+          <button type="submit" value="submit">Submit</button>
           <input type="hidden" name="_next" value="#">
         </form>
       </div>
