pre ~ 28.01.22 @ 12:09PM | fixing issue with form

--- a/index.html
+++ b/index.html
@@ -155,14 +155,14 @@
           <p>Although I am not actively searching for new work, I am always open to chat about anything! </p>
         </div>
         <form action="https://formsubmit.co/d7abdea6c189dd7cc96d4eeffd77d5eb" method="POST">
-          <input type="hidden" name="_captcha" value="false">
-          <input type="text" name="_honey" style="display: none;">
           <input type="text" name="Full Name" placeholder="Full Name" required>
           <input type="text" name="Company" placeholder="Company" required>
           <input type="email" name="Email Address" placeholder="Email Address" required> 
           <input type="tel" name="Phone Number" placeholder="Phone No." required>
           <button type="submit" value="submit">Submit</button>
-          <input type="hidden" name="_next" value="#">
+          <input type="hidden" name="_next" value="https://iamsergio.dev">
+          <input type="hidden" name="_captcha" value="false">
+          <input type="text" name="_honey" style="display: none;">
         </form>
       </div>
     </section>
