pre ~ 28.01.22 @ 12:09PM | fixing issue with form

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
           <input type="email" name="Email Address" placeholder="Email Address" required> 
           <input type="tel" name="Phone Number" placeholder="Phone No." required>
           <button type="submit" value="submit">Submit</button>
-          <input type="hidden" name="_next" value="https://iamsergio.dev">
+          <input type="hidden" name="_next" value="https://iamsergio.dev/">
           <input type="hidden" name="_captcha" value="false">
           <input type="text" name="_honey" style="display: none;">
         </form>
