--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     <link rel="stylesheet" href="./main.css">
     <link rel="stylesheet" href="./css/scrollbar.css">
     <link rel="stylesheet" href="./css/responsive.css">
+    <link rel="stylesheet" href="./css/animate.css">
 
     <!-- External Links -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -77,7 +78,7 @@
 
     <section class="head bg">
       <div role="doc-subtitle">Hi, my name is</div>
-      <h1 class="myName">Sergio Garcia Gallego</h1>
+      <a href="./docs/resume/resume_1-22.pdf"><h1 class="myName">Sergio Garcia Gallego</h1></a>
       <h2 class="myJob">and I help build the web.</h2>
       <p class="myDesc">An ambitious UK-based 18 year old Junior Frontend Developer with 1.5 years of experience. Currently working at <a href="https://purplebeard.co.uk/" target="_blank" rel="noreferrer">PurpleBeard Training ltd.</a> with the vision of making IT apprenticeships & training more accessible.</p>
     </section>
@@ -100,7 +101,7 @@
         <div class="longDesc">
           <p>Hey there <span class="eWave"></span> I'm Sergio, & my passion lies in tech, preferably where design & UX is involved.</p>
           <p>My magnet towards computing began at a young age, when the only way for me to install Minecraft was through a battered laptop running Fedora Linux 18. The challenge of using Xterm to install any application taunted me to learn more I guess.</p>
-          <p>Fast forward to 2020, and I have had the pleasure to work at <a href="https://vasavebusiness.com" target="_blank" rel="noreferrer">a start-up</a> and have allowed the opportunity for a bit of <a href="">freelancing</a>.</p>
+          <p>Fast forward to 2020, and I have had the pleasure to work at <a href="https://vasavebusiness.com" target="_blank" rel="noreferrer">a start-up</a> and have allowed the opportunity for a bit of <a href="https://meghdhara.co.uk" target="_blank" rel="noreferrer">freelancing</a>.</p>
           <p>Come present day I am now working for a <a href="https://purplebeard.co.uk/" target="_blank" rel="noreferrer">gov.uk training provider</a>. It has been a real rollercoaster for the time I've been in the industry, & I can't wait to see what comes next!</p>
           <p>Here are a few technologies I have been using daily:</p>
           <ul class="techSkills">
@@ -156,9 +157,9 @@
         </div>
         <form action="https://formsubmit.co/d7abdea6c189dd7cc96d4eeffd77d5eb" method="POST">
           <input type="text" name="Full Name" placeholder="Full Name" required>
-          <input type="text" name="Company" placeholder="Company" required>
           <input type="email" name="Email Address" placeholder="Email Address" required> 
           <input type="tel" name="Phone Number" placeholder="Phone No." required>
+          <textarea name="Message" id="" cols="30" rows="2" placeholder="Your Message" minlength="" maxlength="" required></textarea>
           <button type="submit" value="submit">Submit</button>
           <input type="hidden" name="_next" value="https://iamsergio.dev/">
           <input type="hidden" name="_captcha" value="false">
