pre ~ 29.01.22 @ 03:22AM | [editing form]

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
           <input type="text" name="Full Name" placeholder="Full Name" required>
           <input type="email" name="Email Address" placeholder="Email Address" required> 
           <input type="tel" name="Phone Number" placeholder="Phone No." required>
-          <textarea name="Message" id="" cols="30" rows="2" placeholder="Your Message" minlength="" maxlength="" required></textarea>
+          <textarea name="Message" cols="30" rows="2" placeholder="Your Message" minlength="25" maxlength="500" required></textarea>
           <button type="submit" value="submit">Submit</button>
           <input type="hidden" name="_next" value="https://iamsergio.dev/">
           <input type="hidden" name="_captcha" value="false">
