pre ~ 29.01.22 | [Global Site Tag (gtag.js) insertion - Google Analytics] - help track and analyse data and traffic

--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html lang="en">
   <head>
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-ECZT75Q4NM"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-ECZT75Q4NM');
+    </script>
+
     <!-- Character Set -->
     <meta charset="UTF-8">
 
