pre ~ 30.01.22 @ 19:36PM | [add footer padding & add mail img] - 1 to 5 % padding on .allContact

--- a/index.html
+++ b/index.html
@@ -98,7 +98,8 @@
         <li><a href="https://github.com/sgarciagallego" target="_blank"><img src="./img/icons8-github-50px.png" alt="GitHub account"></li>
         <li><a href="https://www.instagram.com/s_garciagallego/" target="_blank"><img src="./img/icons8-instagram-50px.png" alt="Instagram account"></a></li>
         <li><a href="https://twitter.com/mrgarciagallego" target="_blank"><img src="./img/icons8-twitter-50px.png" alt="Twitter account"></a></li>
-        <li><a href="https://www.linkedin.com/in/sgarciagallego/" target="_blank"><img src="./img/icons8-linkedin-50px.png" alt="LinkedIn account" id="last"></a></li>
+        <li><a href="https://www.linkedin.com/in/sgarciagallego/" target="_blank"><img src="./img/icons8-linkedin-50px.png" alt="LinkedIn account"></a></li>
+        <li><a href="mailto:gallegogarciasergio@gmail.com" target="_blank"><img src="./img/icons8-email-50px.png" alt="Send me an Email" id="last"></a></li>
       </ul>
     </div>
 
