--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
       gtag('config', 'G-ECZT75Q4NM');
     </script>
 
+    <!-- Web Thumbnail Stuff -->
+    <meta property="og:image" content="./web-thumbnail.png">
+    <meta property="og:title" content="Sergio Garcia Gallego"/>
+    <meta property="og:description" content="Hi! I'm Sergio Garcia Gallego, and I'm a Frontend Developer helping to build the web. Have a look at my portfolio, and if you like what you see, get in touch!"/>
+    <meta property="og:url" content="https://iamsergio.dev"/>
+    <meta property='og:image:width' content='95' />
+    <meta property='og:image:height' content='95' />
+    <meta property="og:type" content="website">
+
     <!-- Character Set -->
     <meta charset="UTF-8">
 
@@ -22,7 +31,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- For the Bots -->
-    <meta name=”robots” content=”index, follow”>
+    <meta name="robots" content="index, follow">
 
     <!-- Site Favicon -->
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
