--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     </script>
 
     <!-- Web Thumbnail Stuff -->
-    <meta property="og:image" content="./web-thumbnail.png">
+    <meta property="og:image" content="https://ibb.co/RpzxwF9">
     <meta property="og:title" content="Sergio Garcia Gallego"/>
-    <meta property="og:description" content="Hi! I'm Sergio Garcia Gallego, and I'm a Frontend Developer helping to build the web. Have a look at my portfolio, and if you like what you see, get in touch!"/>
+    <meta property="og:description" content="Hi! I'm Sergio, and I'm a Frontend Developer helping to build the web. Have a look at my portfolio. Like what you see? Get in touch!"/>
     <meta property="og:url" content="https://iamsergio.dev"/>
     <meta property='og:image:width' content='95' />
     <meta property='og:image:height' content='95' />
@@ -52,6 +52,9 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
+
+    <!-- Site Author -->
+    <meta name="author" content="Sergio Garcia Gallego">
 
     <!-- Site Title -->
     <title>Sergio Garcia Gallego</title>
