--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </script>
 
     <!-- Web Thumbnail Stuff -->
-    <meta property="og:image" content="https://ibb.co/RpzxwF9">
+    <meta property="og:image" content="https://iamsergio.dev/web-thumbnail.png">
     <meta property="og:title" content="Sergio Garcia Gallego"/>
     <meta property="og:description" content="Hi! I'm Sergio, and I'm a Frontend Developer helping to build the web. Have a look at my portfolio. Like what you see? Get in touch!"/>
     <meta property="og:url" content="https://iamsergio.dev"/>
