--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- Web Thumbnail Stuff -->
     <meta property="og:image" content="https://iamsergio.dev/web-thumbnail.png">
     <meta property="og:title" content="Sergio Garcia Gallego"/>
-    <meta property="og:description" content="Hi! I'm Sergio, and I'm a Frontend Developer helping to build the web. Have a look at my portfolio. Like what you see? Get in touch!"/>
+    <meta property="og:description" content="Sergio is a Junior Frontend Developer specializing in all technologies necessary to build spectacular web experiences "/>
     <meta property="og:url" content="https://iamsergio.dev"/>
     <meta property='og:image:width' content='1903' />
     <meta property='og:image:height' content='895' />
