pre ~ 31.01.22 @ 02:37AM | [twitter Specific Thumbnail addition]

--- a/index.html
+++ b/index.html
@@ -15,11 +15,18 @@
     <!-- Web Thumbnail Stuff -->
     <meta property="og:image" content="https://iamsergio.dev/web-thumbnail.png">
     <meta property="og:title" content="Sergio Garcia Gallego"/>
-    <meta property="og:description" content="Sergio is a Junior Frontend Developer specializing in all technologies necessary to build spectacular web experiences "/>
+    <meta property="og:description" content="Sergio is a Junior Frontend Developer specializing in all technologies necessary to build spectacular web experiences.">
     <meta property="og:url" content="https://iamsergio.dev"/>
-    <meta property='og:image:width' content='1903' />
-    <meta property='og:image:height' content='895' />
+    <meta property="og:image:width" content="1903">
+    <meta property="og:image:height" content="895">
     <meta property="og:type" content="website">
+
+    <!-- Twitter Specific Thumbnail Properties -->
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:site" content="https://iamsergio.dev">
+    <meta name="twitter:title" content="Sergio Garcia Gallego">
+    <meta name="twitter:description" content="Sergio is a Junior Frontend Developer specializing in all technologies necessary to build spectacular web experiences.">
+    <meta name="twitter:image" content="https://iamsergio.dev/web-thumbnail.png">
 
     <!-- Character Set -->
     <meta charset="UTF-8">
