pre ~ 31.01.22 @ 02:37AM | [twitter Specific Thumbnail addition] - summary-large_image

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <meta property="og:type" content="website">
 
     <!-- Twitter Specific Thumbnail Properties -->
-    <meta name="twitter:card" content="summary">
+    <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="https://iamsergio.dev">
     <meta name="twitter:title" content="Sergio Garcia Gallego">
     <meta name="twitter:description" content="Sergio is a Junior Frontend Developer specializing in all technologies necessary to build spectacular web experiences.">
