pre ~ [Changing Favicons] - more generalised, higher quality, more compatibility etc

--- a/index.html
+++ b/index.html
@@ -13,51 +13,42 @@
     </script>
 
     <!-- Web Thumbnail Stuff -->
-    <meta property="og:image" content="https://iamsergio.dev/web-thumbnail.png">
-    <meta property="og:title" content="Sergio Garcia Gallego"/>
-    <meta property="og:description" content="Sergio is a Junior Frontend Developer specializing in all technologies necessary to build spectacular web experiences.">
-    <meta property="og:url" content="https://iamsergio.dev"/>
-    <meta property="og:image:width" content="1903">
-    <meta property="og:image:height" content="895">
-    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://iamsergio.dev/web-thumbnail.png" />
+    <meta property="og:title" content="Sergio Garcia Gallego" />
+    <meta property="og:description" content="Sergio is a Junior Frontend Developer specializing in all technologies necessary to build spectacular web experiences." />
+    <meta property="og:url" content="https://iamsergio.dev" />
+    <meta property="og:image:width" content="1903" />
+    <meta property="og:image:height" content="895" />
+    <meta property="og:type" content="website" />
 
     <!-- Twitter Specific Thumbnail Properties -->
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:site" content="https://iamsergio.dev">
-    <meta name="twitter:title" content="Sergio Garcia Gallego">
-    <meta name="twitter:description" content="Sergio is a Junior Frontend Developer specializing in all technologies necessary to build spectacular web experiences.">
-    <meta name="twitter:image" content="https://iamsergio.dev/web-thumbnail.png">
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="https://iamsergio.dev" />
+    <meta name="twitter:title" content="Sergio Garcia Gallego" />
+    <meta name="twitter:description" content="Sergio is a Junior Frontend Developer specializing in all technologies necessary to build spectacular web experiences." />
+    <meta name="twitter:image" content="https://iamsergio.dev/web-thumbnail.png" />
 
     <!-- Character Set -->
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
 
     <!-- Compatability -->
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
     <!-- Viewports -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- For the Bots -->
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow" />
 
     <!-- Site Favicon -->
-    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
-    <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/manifest.json">
-    <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="48x48" href="/favicon-48x48.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#707070">
+    <meta name="msapplication-TileColor" content="#729bac">
     <meta name="theme-color" content="#ffffff">
 
     <!-- Site Author -->
@@ -76,10 +67,10 @@
     <link rel="canonical" href="https://iamsergio.dev/">
 
     <!-- Internal Links -->
-    <link rel="stylesheet" href="./main.css">
-    <link rel="stylesheet" href="./css/scrollbar.css">
-    <link rel="stylesheet" href="./css/responsive.css">
-    <link rel="stylesheet" href="./css/animate.css">
+    <link rel="stylesheet" href="/main.css">
+    <link rel="stylesheet" href="/css/scrollbar.css">
+    <link rel="stylesheet" href="/css/responsive.css">
+    <link rel="stylesheet" href="/css/animate.css">
 
     <!-- External Links -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -95,30 +86,30 @@
 
     <nav class="fixedtop">
       <ul class="left">
-        <li><a href="#"><img src="./logo.png" alt="Site Logo"></a></li>
+        <li><a href="#"><img src="/logo.png" alt="Site Logo"></a></li>
       </ul>
       <ul class="right mono">
         <li><i>01.</i><a href="#about">About</a></li>
         <li><i>02.</i><a href="#experience">Experience</a></li>
         <li><i>03.</i><a href="#contact">Contact</a></li>
-        <li><a href="./docs/resume/resume_1-22.pdf" target="_blank" id="last">Resume</a></li>
+        <li><a href="/docs/resume/resume_1-22.pdf" target="_blank" id="last">Resume</a></li>
       </ul>
     </nav>
 
     <section class="head bg">
       <div role="doc-subtitle">Hi, my name is</div>
-      <a href="./docs/resume/resume_1-22.pdf"><h1 class="myName">Sergio Garcia Gallego</h1></a>
+      <a href="/docs/resume/resume_1-22.pdf"><h1 class="myName">Sergio Garcia Gallego</h1></a>
       <h2 class="myJob">and I help build the web.</h2>
       <p class="myDesc">An ambitious UK-based 18 year old Junior Frontend Developer with 1.5 years of experience. Currently working at <a href="https://purplebeard.co.uk/" target="_blank" rel="noreferrer">PurpleBeard Training ltd.</a> with the vision of making IT apprenticeships & training more accessible.</p>
     </section>
 
     <div class="inline">
       <ul class="social">
-        <li><a href="https://github.com/sgarciagallego" target="_blank"><img src="./img/icons8-github-50px.png" alt="GitHub account"></li>
-        <li><a href="https://www.instagram.com/s_garciagallego/" target="_blank"><img src="./img/icons8-instagram-50px.png" alt="Instagram account"></a></li>
-        <li><a href="https://twitter.com/mrgarciagallego" target="_blank"><img src="./img/icons8-twitter-50px.png" alt="Twitter account"></a></li>
-        <li><a href="https://www.linkedin.com/in/sgarciagallego/" target="_blank"><img src="./img/icons8-linkedin-50px.png" alt="LinkedIn account"></a></li>
-        <li><a href="mailto:gallegogarciasergio@gmail.com" target="_blank"><img src="./img/icons8-email-50px.png" alt="Send me an Email" id="last"></a></li>
+        <li><a href="https://github.com/sgarciagallego" target="_blank"><img src="/img/icons8-github-50px.png" alt="GitHub account"></li>
+        <li><a href="https://www.instagram.com/s_garciagallego/" target="_blank"><img src="/img/icons8-instagram-50px.png" alt="Instagram account"></a></li>
+        <li><a href="https://twitter.com/mrgarciagallego" target="_blank"><img src="/img/icons8-twitter-50px.png" alt="Twitter account"></a></li>
+        <li><a href="https://www.linkedin.com/in/sgarciagallego/" target="_blank"><img src="/img/icons8-linkedin-50px.png" alt="LinkedIn account"></a></li>
+        <li><a href="mailto:gallegogarciasergio@gmail.com" target="_blank"><img src="/img/icons8-email-50px.png" alt="Send me an Email" id="last"></a></li>
       </ul>
     </div>
 
@@ -135,16 +126,16 @@
           <p>Come present day I am now working for a <a href="https://purplebeard.co.uk/" target="_blank" rel="noreferrer">gov.uk training provider</a>. It has been a real rollercoaster for the time I've been in the industry, & I can't wait to see what comes next!</p>
           <p>Here are a few technologies I have been using daily:</p>
           <ul class="techSkills">
-            <li><img src="./img/icons8-html-5-50px.png" alt="HTMl5" title="HTML5"></li>
-            <li><img src="./img/icons8-css3-50px.png" alt="CSS3" title="CSS3"></li>
-            <li><img src="./img/icons8-sass-50px.png" alt="SASS" title="SASS"></li>
-            <li><img src="./img/icons8-javascript-50px.png" alt="JavaScript (ES6+)" title="JavaScript (ES6+)"></li>
-            <li><img src="./img/icons8-reactjs-50px.png" alt="React.js" title="React.js"></li>
-            <li><img src="./img/icons8-git-50px.png" alt="Git" title="Git"></li>
+            <li><img src="/img/icons8-html-5-50px.png" alt="HTMl5" title="HTML5"></li>
+            <li><img src="/img/icons8-css3-50px.png" alt="CSS3" title="CSS3"></li>
+            <li><img src="/img/icons8-sass-50px.png" alt="SASS" title="SASS"></li>
+            <li><img src="/img/icons8-javascript-50px.png" alt="JavaScript (ES6+)" title="JavaScript (ES6+)"></li>
+            <li><img src="/img/icons8-reactjs-50px.png" alt="React.js" title="React.js"></li>
+            <li><img src="/img/icons8-git-50px.png" alt="Git" title="Git"></li>
           </ul>
         </div>
         <div class="myPic">
-          <img src="./img/myPic.jpg" alt="This is a Picture of me!">
+          <img src="/img/myPic.jpg" alt="This is a Picture of me!">
         </div>
       </div>
     </section>
