[Adding original favicon.io] - due to favicon.ico deletion

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     <meta name="robots" content="index, follow" />
 
     <!-- Site Favicon -->
+    <link rel="shortcut icon" href="/favicon.ico">
     <link rel="icon" type="image/svg+xml" href="/favicon.svg">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
