pre ~ 01.02.22 @ 1:42PM | [Changing Meta Description] - for easily readable text from search engine

--- a/index.html
+++ b/index.html
@@ -59,10 +59,7 @@
     <title>Sergio Garcia Gallego</title>
 
     <!-- Site Description -->
-    <meta name="description" content="Hi! I'm Sergio Garcia Gallego, and I'm a Frontend Developer helping to build the web. Have a look at my portfolio, and if you like what you see, get in touch!">
-
-    <!-- Keywords -->
-    <meta name="keywords" content="Frontend Developer Portfolio, Developer Portfolio, Sergio Garcia Gallego, Sergio Garcia, Portfolio, Junior Developer, Junior Frontend Developer">
+    <meta name="description" content="Sergio is a Junior Frontend Developer specializing in all technologies necessary to build spectacular web experiences.">
 
     <!-- Canonical Tag -->
     <link rel="canonical" href="https://iamsergio.dev/">
