--- a/index.html
+++ b/index.html
@@ -98,16 +98,17 @@
       <div role="doc-subtitle">Hi, my name is</div>
       <a href="/docs/resume/resume_1-22.pdf"><h1 class="myName">Sergio Garcia Gallego</h1></a>
       <h2 class="myJob">and I help build the web.</h2>
-      <p class="myDesc">An ambitious UK-based 18 year old Junior Frontend Developer with 1.5 years of experience. Currently working at <a href="https://purplebeard.co.uk/" target="_blank" rel="noreferrer">PurpleBeard Training ltd.</a> with the vision of making IT apprenticeships & training more accessible.</p>
+      <p class="myDesc">An ambitious UK-based 18 year old Junior Frontend Developer with 1.5 years of experience. Currently working at <a href="https://purplebeard.co.uk/" target="_blank" rel="noreferrer" class="outLink"> PurpleBeard Training ltd.</a> with the vision of making IT apprenticeships & training more accessible.</p>
+      <p class="myDonations">Like what you see? Donate to my PayPal & I will give 80% of donations to a <a href="https://www.rainforesttrust.org/" target="_blank" class="outLink">reputable charity</a> helping to save the planet.</p>
     </section>
 
     <div class="inline">
       <ul class="social">
         <li><a href="https://github.com/sgarciagallego" target="_blank"><img src="/img/icons8-github-50px.png" alt="GitHub account"></li>
+        <li><a href="https://www.linkedin.com/in/sgarciagallego/" target="_blank"><img src="/img/icons8-linkedin-50px.png" alt="LinkedIn account"></a></li>
+        <li><a href="https://paypal.me/sgarciagallego" target="_blank"><img src="/img/icons8-donate-50px.png" alt="Donations"></a></li>
         <li><a href="https://www.instagram.com/s_garciagallego/" target="_blank"><img src="/img/icons8-instagram-50px.png" alt="Instagram account"></a></li>
         <li><a href="https://twitter.com/mrgarciagallego" target="_blank"><img src="/img/icons8-twitter-50px.png" alt="Twitter account"></a></li>
-        <li><a href="https://www.linkedin.com/in/sgarciagallego/" target="_blank"><img src="/img/icons8-linkedin-50px.png" alt="LinkedIn account"></a></li>
-        <li><a href="mailto:gallegogarciasergio@gmail.com" target="_blank"><img src="/img/icons8-email-50px.png" alt="Send me an Email" id="last"></a></li>
       </ul>
     </div>
 
@@ -120,8 +121,8 @@
         <div class="longDesc">
           <p>Hey there <span class="eWave"></span> I'm Sergio, & my passion lies in tech, preferably where design & UX is involved.</p>
           <p>My magnet towards computing began at a young age, when the only way for me to install Minecraft was through a battered laptop running Fedora Linux 18. The challenge of using Xterm to install any application taunted me to learn more I guess.</p>
-          <p>Fast forward to 2020, and I have had the pleasure to work at <a href="https://vasavebusiness.com" target="_blank" rel="noreferrer">a start-up</a> and have allowed the opportunity for a bit of <a href="https://meghdhara.co.uk" target="_blank" rel="noreferrer">freelancing</a>.</p>
-          <p>Come present day I am now working for a <a href="https://purplebeard.co.uk/" target="_blank" rel="noreferrer">gov.uk training provider</a>. It has been a real rollercoaster for the time I've been in the industry, & I can't wait to see what comes next!</p>
+          <p>Fast forward to 2020, and I have had the pleasure to work at <a href="https://vasavebusiness.com" target="_blank" rel="noreferrer" class="outLink">a start-up</a> and have allowed the opportunity for a bit of <a href="https://meghdhara.co.uk" target="_blank" rel="noreferrer" class="outLink">freelancing</a> as well.</p>
+          <p>Come present day I am now working for a <a href="https://purplebeard.co.uk/" target="_blank" rel="noreferrer" class="outLink">gov.uk training provider</a>. It has been a real rollercoaster for the time I've been in the industry, & I can't wait to see what comes next!</p>
           <p>Here are a few technologies I have been using daily:</p>
           <ul class="techSkills">
             <li><img src="/img/icons8-html-5-50px.png" alt="HTMl5" title="HTML5"></li>
@@ -188,7 +189,7 @@
     </section>
 
     <footer class="allContact">
-      <p>Build & Design by <a href="mailto:gallegogarciasergio@gmail.com"><span class="copyright"></span> Sergio Garcia</a></p>
+      <p>Build & Design by <a href="mailto:gallegogarciasergio@gmail.com"><span class="copyright"></span> Sergio Garcia</a> | Icons  by <a href="https://icons8.com" target="_blank">Icons8</a></p>
     </footer>
 
   </body>
