--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <li><a href="https://www.linkedin.com/in/sgarciagallego/" target="_blank"><img src="/img/icons8-linkedin-50px.png" alt="LinkedIn account"></a></li>
         <li><a href="https://paypal.me/sgarciagallego" target="_blank"><img src="/img/icons8-donate-50px.png" alt="Donations"></a></li>
         <li><a href="https://www.instagram.com/s_garciagallego/" target="_blank"><img src="/img/icons8-instagram-50px.png" alt="Instagram account"></a></li>
-        <li><a href="https://twitter.com/mrgarciagallego" target="_blank"><img src="/img/icons8-twitter-50px.png" alt="Twitter account"></a></li>
+        <li><a href="https://twitter.com/mrgarciagallego" target="_blank"><img src="/img/icons8-twitter-50px.png" alt="Twitter account" id="last"></a></li>
       </ul>
     </div>
 
