--- a/index.html
+++ b/index.html
@@ -98,15 +98,15 @@
       <div role="doc-subtitle">Hi, my name is</div>
       <a href="/docs/resume/resume_1-22.pdf"><h1 class="myName">Sergio Garcia Gallego</h1></a>
       <h2 class="myJob">and I help build the web.</h2>
-      <p class="myDesc">An ambitious UK-based 18 year old Junior Frontend Developer with 1.5 years of experience. Currently working at <a href="https://purplebeard.co.uk/" target="_blank" rel="noreferrer" class="outLink"> PurpleBeard Training ltd.</a> with the vision of making IT apprenticeships & training more accessible.</p>
-      <p class="myDonations">Like what you see? Donate to my PayPal & I will give 80% of donations to a <a href="https://www.rainforesttrust.org/" target="_blank" class="outLink">reputable charity</a> helping to save the planet.</p>
+      <p class="myDesc">An ambitious UK-based 18 year old Junior Frontend Developer with 1.5 years of experience. Currently working at <a href="https://purplebeard.co.uk/" target="_blank" rel="noreferrer" class="outLink"> PurpleBeard Training</a> with the vision of making IT apprenticeships & training more accessible.</p>
+      <p class="myDonations">If you enjoy this web experience, consider donating to a cause I hold dear to my heart, the <a href="https://www.rainforesttrust.org" class="outLink">Rainforest Trust</a>, working tirelessly to save the wildlife & ecosystem.</p>
     </section>
 
     <div class="inline">
       <ul class="social">
         <li><a href="https://github.com/sgarciagallego" target="_blank"><img src="/img/icons8-github-50px.png" alt="GitHub account"></li>
         <li><a href="https://www.linkedin.com/in/sgarciagallego/" target="_blank"><img src="/img/icons8-linkedin-50px.png" alt="LinkedIn account"></a></li>
-        <li><a href="https://paypal.me/sgarciagallego" target="_blank"><img src="/img/icons8-donate-50px.png" alt="Donations"></a></li>
+        <li><a href="https://www.rainforesttrust.org/?form=FUNBUNYXEWL" target="_blank"><img src="/img/icons8-donate-50px.png" alt="Donations"></a></li>
         <li><a href="https://www.instagram.com/s_garciagallego/" target="_blank"><img src="/img/icons8-instagram-50px.png" alt="Instagram account"></a></li>
         <li><a href="https://twitter.com/mrgarciagallego" target="_blank"><img src="/img/icons8-twitter-50px.png" alt="Twitter account" id="last"></a></li>
       </ul>
